loglite: fix bug in z-index of tabs!

--- a/frontend/src/components/Main/App.scss
+++ b/frontend/src/components/Main/App.scss
@@ -21,6 +21,7 @@ body {
   left: 0px;
   right: 0px;
   top: 0px;
+  z-index: 30;
 }
 
 .normal {
